--- a/dawnTheme/sections/infinite-scroll.liquid
+++ b/dawnTheme/sections/infinite-scroll.liquid
@@ -1,37 +1,37 @@
 <div class="relative overflow-hidden whitespace-nowrap h-20 flex items-center my-20">
     <div class="flex space-x-20 animate-leftToRightMarquee w-max font-bold marquee-content">
-        <h1 class="px-5 py-3 text-textPurple font-bold">NATURAL LOOK</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text1}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">👀</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">ALL-DAY COMFORT</p>
+            <p class="text-4xl px-5">{{section.settings.text2}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">✨</h1>
 
-        <h1 class="px-5 py-3 text-textPurple font-bold">NATURAL LOOK</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text1}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">👀</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">ALL-DAY COMFORT</p>
+            <p class="text-4xl px-5">{{section.settings.text2}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">✨</h1>
 
-        <h1 class="px-5 py-3 text-textPurple font-bold">NATURAL LOOK</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text1}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">👀</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">ALL-DAY COMFORT</p>
+            <p class="text-4xl px-5">{{section.settings.text2}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">✨</h1>
 
-        <h1 class="px-5 py-3 text-textPurple font-bold">NATURAL LOOK</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text1}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">👀</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">ALL-DAY COMFORT</p>
+            <p class="text-4xl px-5">{{section.settings.text2}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">✨</h1>
 
-        <h1 class="px-5 py-3 text-textPurple font-bold">NATURAL LOOK</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text1}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">👀</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">ALL-DAY COMFORT</p>
+            <p class="text-4xl px-5">{{section.settings.text2}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">✨</h1>
     </div>
@@ -39,31 +39,31 @@
 
 <div class="relative overflow-hidden whitespace-nowrap h-20 flex items-center my-20">
     <div class="flex space-x-20 animate-rightToLeftMarquee w-max font-bold marquee-content">
-        <h1 class="px-5 py-3 text-textPurple font-bold">SOFT LENSES</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text4}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">😍</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">PREMIUM QUALITY</p>
+            <p class="text-4xl px-5">{{section.settings.text3}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">💧</h1>
 
-        <h1 class="px-5 py-3 text-textPurple font-bold">SOFT LENSES</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text4}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">😍</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">PREMIUM QUALITY</p>
+            <p class="text-4xl px-5">{{section.settings.text3}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">💧</h1>
 
-        <h1 class="px-5 py-3 text-textPurple font-bold">SOFT LENSES</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text4}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">😍</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">PREMIUM QUALITY</p>
+            <p class="text-4xl px-5">{{section.settings.text3}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">💧</h1>
 
-        <h1 class="px-5 py-3 text-textPurple font-bold">SOFT LENSES</h1>
+        <h1 class="px-5 py-3 text-textPurple font-bold">{{section.settings.text4}}</h1>
         <h1 class="px-5 py-3 rounded-xl font-bold">😍</h1>
         <div class="px-5 py-3 flex text-textPurple items-center rounded-[18px] font-bold bg-oceanBlue">
-            <p class="text-4xl px-5">PREMIUM QUALITY</p>
+            <p class="text-4xl px-5">{{section.settings.text3}}</p>
         </div>
         <h1 class="px-5 py-3 rounded-xl font-bold">💧</h1>
     </div>
@@ -110,3 +110,40 @@
   padding-left: 20px; /* Space between copies */
 }
 </style>
+
+
+
+
+{%  schema  %} 
+{
+  "name" : "Infinite Scroll Marquee",
+  "settings" : [
+    {
+      "type": "text",
+      "id": "text1",
+      "default" : "NATURAL LOOK",
+      "label" : "Text 1"
+    },
+    {
+      "type": "text",
+      "id": "text2",
+      "default" : "ALL-DAY COMFORT",
+      "label" : "Text 2"
+    },
+    {
+      "type": "text",
+      "id": "text3",
+      "default" : "PREMIUM QUALITY",
+      "label" : "Text 3"
+    },
+    {
+      "type": "text",
+      "id": "text4",
+      "default" : "SOFT LENSES",
+      "label" : "Text 4"
+    }
+  ]
+}
+
+
+{% endschema %} 
