--- a/dawnTheme/sections/header.liquid
+++ b/dawnTheme/sections/header.liquid
@@ -13,63 +13,69 @@
 
 
 <style>
-  header-drawer {
-    justify-self: start;
-    margin-left: -1.2rem;
+ header-drawer {
+  justify-self: start;
+  margin-left: -1.2rem;
+  order: -1; /* This ensures the drawer comes first */
+}
+
+{%- if section.settings.sticky_header_type == 'reduce-logo-size' -%}
+  .scrolled-past-header .header__heading-logo-wrapper {
+    width: 75%;
   }
+{%- endif -%}
 
-  {%- if section.settings.sticky_header_type == 'reduce-logo-size' -%}
-    .scrolled-past-header .header__heading-logo-wrapper {
-      width: 75%;
-    }
-  {%- endif -%}
+.menu-drawer-container {
+  display: flex;
+}
 
-  {%- if section.settings.menu_type_desktop != "drawer" -%}
-    @media screen and (min-width: 990px) {
-      header-drawer {
-        display: none;
-      }
-    }
-  {%- endif -%}
+/* Add flexbox layout to header */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content : space-between;
+}
 
-  .menu-drawer-container {
-    display: flex;
-  }
+/* Ensure header elements have proper order */
+.header__heading,
+.header__heading-link {
+  order: 0;
+}
 
-  .list-menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
+.list-menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-  .list-menu--inline {
-    display: inline-flex;
-    flex-wrap: wrap;
-  }
+.list-menu--inline {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
 
-  summary.list-menu__item {
-    padding-right: 2.7rem;
-  }
+summary.list-menu__item {
+  padding-right: 2.7rem;
+}
 
-  .list-menu__item {
-    display: flex;
-    align-items: center;
-    line-height: calc(1 + 0.3 / var(--font-body-scale));
-  }
+.list-menu__item {
+  display: flex;
+  align-items: center;
+  line-height: calc(1 + 0.3 / var(--font-body-scale));
+}
 
+.list-menu__item--link {
+  text-decoration: none;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  line-height: calc(1 + 0.8 / var(--font-body-scale));
+}
+
+@media screen and (min-width: 750px) {
   .list-menu__item--link {
-    text-decoration: none;
-    padding-bottom: 1rem;
-    padding-top: 1rem;
-    line-height: calc(1 + 0.8 / var(--font-body-scale));
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
   }
-
-  @media screen and (min-width: 750px) {
-    .list-menu__item--link {
-      padding-bottom: 0.5rem;
-      padding-top: 0.5rem;
-    }
-  }
+}
 </style>
 
 {%- style -%}
@@ -122,15 +128,14 @@
     endif
   -%}
   <header class="header header--{{ section.settings.logo_position }} header--mobile-{{ section.settings.mobile_logo_position }} {% if section.settings.menu_type_desktop == 'drawer' %} drawer-menu{% endif %}{% if section.settings.menu != blank %} header--has-menu{% endif %}{% if has_app_block %} header--has-app{% endif %}{% if social_links %} header--has-social{% endif %}{% if shop.customer_accounts_enabled %} header--has-account{% endif %}{% if localization_forms %} header--has-localizations{% endif %}">
-    {%- liquid
-      if section.settings.menu != blank
-        render 'header-drawer'
-      endif
+  
+     {% if section.settings.menu != blank %}
+      <div class = "flex">
+        {%  render 'header-drawer' %}
+        {% render 'header-dropdown-menu' %}
+      </div>
+      {%  endif%}
 
-      if section.settings.logo_position == 'top-center' or section.settings.menu == blank
-        render 'header-search', input_id: 'Search-In-Modal-1'
-      endif
-    -%}
 
     {%- if section.settings.logo_position != 'middle-center' -%}
       {%- if request.page_type == 'index' -%}
@@ -155,9 +160,7 @@
               </div>
             {%- else -%}
             
-              <span class="h2">
-                <img src = {{logo_url}} width=180/>
-              </span>
+             
             {%- endif -%}
           </a>
       {%- if request.page_type == 'index' -%}
@@ -165,7 +168,7 @@
       {%- endif -%}
     {%- endif -%}
 
-    {%- liquid
+    {% comment %} {%- liquid
       if section.settings.menu != blank
         if section.settings.menu_type_desktop == 'dropdown'
           render 'header-dropdown-menu'
@@ -173,7 +176,7 @@
           render 'header-mega-menu'
         endif
       endif
-    %}
+    %}  {% endcomment %}
 
     {%- if section.settings.logo_position == 'middle-center' -%}
       {%- if request.page_type == 'index' -%}
@@ -207,7 +210,7 @@
       {%- endif -%}
     {%- endif -%}
 
-    <div class="header__icons{% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header__icons--localization header-localization{% endif %}">
+    <div class="header__icons {% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header__icons--localization header-localization{% endif %}">
       <div class="desktop-localization-wrapper">
         {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
           <localization-form class="small-hide medium-hide" data-prevent-hide>
