random ahh commit

--- a/dawnTheme/sections/featured-collection.liquid
+++ b/dawnTheme/sections/featured-collection.liquid
@@ -68,7 +68,7 @@
   >
     <div class=" flex w-full">
       {%- if section.settings.title != blank -%}
-        <div class="w-full flex justify-center pb-20 {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+        <div class="w-full flex justify-center mb-[95px] {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
           <p class ="flex  text-center text-darkPurple font-bold font-fraunces">
             {{section.settings.title}}
           </p>
