--- a/dawnTheme/assets/style.css
+++ b/dawnTheme/assets/style.css
@@ -616,6 +616,14 @@ video {
   margin-right: auto;
 }
 
+.mb-\[100px\]{
+  margin-bottom: 100px;
+}
+
+.mb-\[95px\]{
+  margin-bottom: 95px;
+}
+
 .block{
   display: block;
 }
@@ -757,6 +765,14 @@ video {
 
 .pb-20{
   padding-bottom: 5rem;
+}
+
+.pb-24{
+  padding-bottom: 6rem;
+}
+
+.pb-\[100px\]{
+  padding-bottom: 100px;
 }
 
 .text-center{
