--- a/dawnTheme/assets/style.css
+++ b/dawnTheme/assets/style.css
@@ -594,6 +594,10 @@ video {
   position: fixed;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
 }
@@ -609,15 +613,6 @@ video {
 .my-20{
   margin-top: 5rem;
   margin-bottom: 5rem;
-}
-
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mb-\[100px\]{
-  margin-bottom: 100px;
 }
 
 .mb-\[95px\]{
@@ -644,16 +639,24 @@ video {
   display: none;
 }
 
-.aspect-\[2\/1\]{
-  aspect-ratio: 2/1;
-}
-
 .h-20{
   height: 5rem;
 }
 
 .h-auto{
   height: auto;
+}
+
+.h-screen{
+  height: 100vh;
+}
+
+.h-\[1000px\]{
+  height: 1000px;
+}
+
+.h-\[500px\]{
+  height: 500px;
 }
 
 .w-full{
@@ -665,16 +668,12 @@ video {
   width: max-content;
 }
 
-.max-w-screen-xl{
-  max-width: 1280px;
+.w-screen{
+  width: 100vw;
 }
 
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.flex-col{
-  flex-direction: column;
 }
 
 .flex-wrap{
@@ -685,16 +684,16 @@ video {
   align-items: center;
 }
 
-.justify-start{
-  justify-content: flex-start;
-}
-
-.justify-end{
-  justify-content: flex-end;
-}
-
 .justify-center{
   justify-content: center;
+}
+
+.gap-10{
+  gap: 2.5rem;
+}
+
+.gap-\[100px\]{
+  gap: 100px;
 }
 
 .space-x-20 > :not([hidden]) ~ :not([hidden]){
@@ -725,9 +724,78 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-\[20px\]{
+  border-radius: 20px;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-\[1px\]{
+  border-width: 1px;
+}
+
+.border-beigish{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 246 / var(--tw-border-opacity, 1));
+}
+
+.border-grayText{
+  --tw-border-opacity: 1;
+  border-color: rgb(143 143 143 / var(--tw-border-opacity, 1));
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+}
+
 .bg-oceanBlue{
   --tw-bg-opacity: 1;
   background-color: rgb(203 233 231 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-\[\#DED6E3\]{
+  --tw-gradient-from: #DED6E3 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#cfa6e8\]{
+  --tw-gradient-from: #cfa6e8 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(207 166 232 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#DED6E3\]\/80{
+  --tw-gradient-from: rgb(222 214 227 / 0.8) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#ded6e3\]\/80{
+  --tw-gradient-from: rgb(222 214 227 / 0.8) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#ded6e3\]{
+  --tw-gradient-from: #ded6e3 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-white{
+  --tw-gradient-to: #fff var(--tw-gradient-to-position);
 }
 
 .object-cover{
@@ -739,6 +807,11 @@ video {
   padding: 0px;
 }
 
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -747,32 +820,6 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.pb-10{
-  padding-bottom: 2.5rem;
-}
-
-.pb-20{
-  padding-bottom: 5rem;
-}
-
-.pb-24{
-  padding-bottom: 6rem;
-}
-
-.pb-\[100px\]{
-  padding-bottom: 100px;
 }
 
 .text-center{
@@ -814,6 +861,16 @@ video {
   color: rgb(63 55 139 / var(--tw-text-opacity, 1));
 }
 
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-800{
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -828,17 +885,11 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-@media (min-width: 768px){
-  .md\:block{
-    display: block;
-  }
-
-  .md\:hidden{
-    display: none;
-  }
-
-  .md\:flex-row{
-    flex-direction: row;
-  }
+.transition{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
