--- a/dawnTheme/assets/style.css
+++ b/dawnTheme/assets/style.css
@@ -606,8 +606,68 @@ video {
   position: sticky;
 }
 
+.top-\[-100px\]{
+  top: -100px;
+}
+
+.left-5{
+  left: 1.25rem;
+}
+
+.top-5{
+  top: 1.25rem;
+}
+
+.top-\[-10px\]{
+  top: -10px;
+}
+
+.top-\[1000px\]{
+  top: 1000px;
+}
+
+.top-\[100px\]{
+  top: 100px;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.left-2{
+  left: 0.5rem;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.left-\[-100px\]{
+  left: -100px;
+}
+
+.left-\[-200px\]{
+  left: -200px;
+}
+
+.left-\[-700px\]{
+  left: -700px;
+}
+
+.left-\[-300px\]{
+  left: -300px;
+}
+
+.left-\[-400px\]{
+  left: -400px;
+}
+
 .isolate{
   isolation: isolate;
+}
+
+.z-0{
+  z-index: 0;
 }
 
 .my-20{
@@ -615,8 +675,30 @@ video {
   margin-bottom: 5rem;
 }
 
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
 .mb-\[95px\]{
   margin-bottom: 95px;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .block{
@@ -647,16 +729,36 @@ video {
   height: auto;
 }
 
-.h-screen{
-  height: 100vh;
+.h-3{
+  height: 0.75rem;
 }
 
-.h-\[1000px\]{
-  height: 1000px;
+.h-\[12px\]{
+  height: 12px;
 }
 
-.h-\[500px\]{
-  height: 500px;
+.h-\[20px\]{
+  height: 20px;
+}
+
+.h-\[25px\]{
+  height: 25px;
+}
+
+.h-\[50px\]{
+  height: 50px;
+}
+
+.h-\[40px\]{
+  height: 40px;
+}
+
+.h-\[60px\]{
+  height: 60px;
+}
+
+.h-\[28px\]{
+  height: 28px;
 }
 
 .w-full{
@@ -672,34 +774,120 @@ video {
   width: 100vw;
 }
 
+.w-auto{
+  width: auto;
+}
+
+.w-3{
+  width: 0.75rem;
+}
+
+.w-\[12px\]{
+  width: 12px;
+}
+
+.w-\[20px\]{
+  width: 20px;
+}
+
+.w-\[25px\]{
+  width: 25px;
+}
+
+.w-\[50px\]{
+  width: 50px;
+}
+
+.w-\[750px\]{
+  width: 750px;
+}
+
+.w-\[40px\]{
+  width: 40px;
+}
+
+.w-\[60px\]{
+  width: 60px;
+}
+
+.w-\[28px\]{
+  width: 28px;
+}
+
+.w-\[350px\]{
+  width: 350px;
+}
+
+.max-w-4xl{
+  max-width: 56rem;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
+.max-w-\[300px\]{
+  max-width: 300px;
+}
+
+.max-w-\[350px\]{
+  max-width: 350px;
+}
+
+.flex-grow{
+  flex-grow: 1;
+}
+
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .flex-wrap{
   flex-wrap: wrap;
 }
 
+.items-start{
+  align-items: flex-start;
+}
+
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-center{
   justify-content: center;
 }
 
-.gap-10{
-  gap: 2.5rem;
-}
-
 .gap-\[100px\]{
   gap: 100px;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-10{
+  gap: 2.5rem;
 }
 
 .space-x-20 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(5rem * var(--tw-space-x-reverse));
   margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -720,34 +908,36 @@ video {
   border-radius: 18px;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
-.rounded-2xl{
-  border-radius: 1rem;
-}
-
 .rounded-\[20px\]{
   border-radius: 20px;
 }
 
+.rounded-\[50px\]{
+  border-radius: 50px;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-\[40px\]{
+  border-radius: 40px;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .border-2{
   border-width: 2px;
-}
-
-.border-\[1px\]{
-  border-width: 1px;
-}
-
-.border-beigish{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 246 / var(--tw-border-opacity, 1));
-}
-
-.border-grayText{
-  --tw-border-opacity: 1;
-  border-color: rgb(143 143 143 / var(--tw-border-opacity, 1));
 }
 
 .border-black{
@@ -760,42 +950,29 @@ video {
   background-color: rgb(203 233 231 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gradient-to-b{
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+.bg-oceanbg{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 244 243 / var(--tw-bg-opacity, 1));
 }
 
-.from-\[\#DED6E3\]{
-  --tw-gradient-from: #DED6E3 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-blue-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
 }
 
-.from-\[\#cfa6e8\]{
-  --tw-gradient-from: #cfa6e8 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(207 166 232 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
-.from-\[\#DED6E3\]\/80{
-  --tw-gradient-from: rgb(222 214 227 / 0.8) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-indigo-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity, 1));
 }
 
-.from-\[\#ded6e3\]\/80{
-  --tw-gradient-from: rgb(222 214 227 / 0.8) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#ded6e3\]{
-  --tw-gradient-from: #ded6e3 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(222 214 227 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-white{
-  --tw-gradient-to: #fff var(--tw-gradient-to-position);
+.bg-darkPurple{
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 37 83 / var(--tw-bg-opacity, 1));
 }
 
 .object-cover{
@@ -805,6 +982,10 @@ video {
 
 .p-0{
   padding: 0px;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .px-10{
@@ -822,12 +1003,54 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.pl-5{
+  padding-left: 1.25rem;
+}
+
 .text-center{
   text-align: center;
 }
 
+.text-start{
+  text-align: start;
+}
+
 .font-fraunces{
   font-family: Fraunces, sans-serif;
+}
+
+.font-handlee{
+  font-family: Handlee, cursive;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-4xl{
@@ -835,8 +1058,46 @@ video {
   line-height: 2.5rem;
 }
 
+.text-\[45px\]{
+  font-size: 45px;
+}
+
+.text-\[50px\]{
+  font-size: 50px;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-\[30px\]{
+  font-size: 30px;
+}
+
+.text-\[20px\]{
+  font-size: 20px;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-\[1\.6rem\]{
+  font-size: 1.6rem;
+}
+
 .font-bold{
   font-weight: 700;
+}
+
+.font-medium{
+  font-weight: 500;
+}
+
+.font-semibold{
+  font-weight: 600;
 }
 
 .uppercase{
@@ -861,9 +1122,14 @@ video {
   color: rgb(63 55 139 / var(--tw-text-opacity, 1));
 }
 
-.text-black{
+.text-gray-600{
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-800{
@@ -871,9 +1137,33 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
+.text-indigo-600{
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.opacity-0{
+  opacity: 0;
+}
+
+.opacity-50{
+  opacity: 0.5;
+}
+
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -885,11 +1175,44 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.transition{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.hover\:bg-indigo-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity, 1));
+}
+
+@media (min-width: 768px){
+  .md\:w-\[400px\]{
+    width: 400px;
+  }
+
+  .md\:w-\[500px\]{
+    width: 500px;
+  }
+
+  .md\:max-w-md{
+    max-width: 28rem;
+  }
+
+  .md\:max-w-\[500px\]{
+    max-width: 500px;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:w-\[500px\]{
+    width: 500px;
+  }
+
+  .lg\:w-\[750px\]{
+    width: 750px;
+  }
+
+  .lg\:max-w-\[500px\]{
+    max-width: 500px;
+  }
 }
 
