--- a/dawnTheme/layout/theme.liquid
+++ b/dawnTheme/layout/theme.liquid
@@ -8,6 +8,7 @@
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="stylesheet" href="{{ 'style.css' | asset_url }}">
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
 
 
 
