--- a/dawnTheme/sections/results.liquid
+++ b/dawnTheme/sections/results.liquid
@@ -13,15 +13,15 @@
             <videosection class= 'flex '>
             </videosection>
 
-            <celebSecret class='flex items-center my-20 w-full  relative h-[700px] border-2 border-black'>
-                <img class="rounded-[50px] absolute sm:right-[10vw] z-0 sm:h-[40vw]" src="https://in.swati.com/cdn/shop/files/Celebs_1000x855E.jpg?v=1728035472&width=750">
+            <celebSecret class='flex flex-col sm:flex-row items-center w-full  relative h-[700px] lg:h-[1000px] border-2 border-black'>
+                <img class="rounded-[50px] absolute md:right-[50px]  xl:right-[5vw] z-0 w-[60vw]" src="https://in.swati.com/cdn/shop/files/Celebs_1000x855E.jpg?v=1728035472&width=750">
         
-                <div class="flex flex-col max-w-[300px] lg:max-w-[500px] bg-oceanbg absolute text-start z-10 rounded-[40px] px-20 py-20 gap-10 h-auto">
+                <div class="flex flex-col flex-wrap md:left-[50px] md:w-[35vw] w-full bg-oceanbg absolute text-start z-10 rounded-[40px] px-[4vw] md:px-[50px] py-[4vw] md:py-[50px] gap-10 h-auto">
                     <p class='font-fraunces leading-tight text-darkPurple text-[45px] font-extrabold'>Celebrity secret revealed!</p>
-                    <p class="text-[1.6rem] font-weight-medium">Discover how celebrities are transforming their look with colored contact lenses!</p>
+                    <p class="text-[1.6rem] font-semibold">Discover how celebrities are transforming their look with colored contact lenses!</p>
                     <ul class="flex flex-col gap-10 h-auto">
                         <li class="flex text-start h-auto">
-                            <div class="bg-darkPurple mx-5 flex text-white text-center font-bold justify-center items-center px-2 py-2 rounded-full w-[28px] h-[28px] text-md">
+                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] text-md">
                                 1
                             </div>
                             <div class="flex">
@@ -29,7 +29,7 @@
                             </div>
                         </li>
                         <li class="flex text-start">
-                            <div class="bg-darkPurple mx-5 flex text-white text-center font-bold justify-center items-center rounded-full w-[28px] h-[28px] text-md">
+                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] text-md">
                                 2
                             </div>
                             <div class="flex">
